--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: test-repo
+  name: github
+  repo: frontend112/okta-timeless
+  branch: master
   
 media_folder: static/assets
 public_folder: assets
