--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-transformer-remark": "^4.8.0",
     "netlify-cms-app": "^2.14.45",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "2.3.2"
