--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@stackbit/gatsby-plugin-menus": "0.0.4",
     "gatsby": "^3.11.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
     "gatsby-source-filesystem": "^3.11.0",
