--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: frontend112/okta-timeless
-  branch: master
+  branch: dev-menu
   
 media_folder: static/assets
 public_folder: assets
