--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "@stackbit/gatsby-plugin-menus": "0.0.4",
     "gatsby": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
+    "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-remark": "^4.8.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "netlify-cms-app": "^2.14.45",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
