--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,5 +15,5 @@ collections:
       - { name: path, label: ŚCIEŻKA }
       - { name: date, label: DATA, widget: datetime }
       - { name: title, label: TYTUŁ }
-      - { name: image, label: ZDJĘCIE, widget: image}
+      - { name: mainImage, label: ZDJĘCIE, widget: image}
       - { name: body, label: ARTYKUŁ, widget: markdown }
